fix alignment of share and settings button on modules

--- a/src/components/Swap/SwapButton/SwapButton.module.css
+++ b/src/components/Swap/SwapButton/SwapButton.module.css
@@ -1,3 +1,3 @@
 .button_container {
-    padding: 5px 32px 0px;
+    margin: 0.5rem 0;
 }
