--- a/src/pages/Swap/Swap.module.css
+++ b/src/pages/Swap/Swap.module.css
@@ -179,7 +179,7 @@
 .extra_row {
     display: flex;
     flex-direction: column;
-    padding: 5px 0;
+    padding: 4px 0;
     justify-content: space-between;
     align-items: center;
 }
@@ -189,7 +189,7 @@
     flex-direction: row;
 
     align-items: center;
-    gap: 5px;
+    gap: 4px;
 }
 
 .acknowledge_text {
